# llmserve

./: FUTURE.md  README.md  pyproject.toml
deploy_out/k8s/: 00-namespace.yaml  01-configmap-manifest.yaml  10-deployment.yaml  20-service.yaml  30-pdb.yaml  40-networkpolicy.yaml  50-kvpages-pvc.yaml  50-storageclass-fast-nvme.yaml
docs/: flow  flow-v2.mmd
examples/local/: llmserve-dev.yaml  llmserve-minimal.yaml
examples/prod/: llmserve-prod.yaml
protos/: llmserve.proto
src/: llmserve_pb2.py  llmserve_pb2_grpc.py
src/llmserve/: cli.py  config.py  runner.py
src/llmserve/apiserver/: http.py  version.py
src/llmserve/deploy/: custom_renderer.py  helpers.py  k8sgen.py  monolith_renderer.py  steps.md  vllm_renderer.py
src/llmserve/engines/: _helpers.py  vllm_decode.py  vllm_prefil.py
src/llmserve/metrics/: prometheus.py
src/llmserve/router/: router.py
src/llmserve/rpc/: client.py  servers.py
src/llmserve/scheduler/: fairshare.py
src/llmserve/util/: plugin.py  prefix_awarness.py  ratelimit.py  types.py
src/plugins/llmserve_ext_lookahead/: __init__.py
